--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datenschutzerklärung - [Name deines Spiels]</title>
+    <title>Datenschutzerklärung - CosmicGarden</title>
     <!-- Tailwind CSS CDN für einfaches Styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -67,13 +67,13 @@
     <div class="container">
         <h1>Datenschutzerklärung</h1>
 
-        <p>Diese Datenschutzerklärung informiert Sie über die Art, den Umfang und den Zweck der Verarbeitung von personenbezogenen Daten (im Folgenden „Daten“) innerhalb unseres mobilen Spiels „<strong>[Name deines Spiels]</strong>“ (im Folgenden „Spiel“) und der damit verbundenen Funktionen und Inhalte.</p>
+        <p>Diese Datenschutzerklärung informiert Sie über die Art, den Umfang und den Zweck der Verarbeitung von personenbezogenen Daten (im Folgenden „Daten“) innerhalb unseres mobilen Spiels „<strong>CosmicGarden</strong>“ (im Folgenden „Spiel“) und der damit verbundenen Funktionen und Inhalte.</p>
         <p>Verantwortlicher im Sinne der Datenschutz-Grundverordnung (DSGVO) und anderer nationaler Datenschutzgesetze der Mitgliedsstaaten sowie sonstiger datenschutzrechtlicher Bestimmungen ist:</p>
 
-        <p><strong>[Dein Name / Name der Firma]</strong><br>
-        <strong>[Deine Adresse / Adresse der Firma]</strong><br>
-        <strong>[Deine E-Mail-Adresse / E-Mail der Firma]</strong><br>
-        <strong>[Deine Telefonnummer / Telefonnummer der Firma (optional)]</strong></p>
+        <p><strong>Julien Buncak</strong><br>
+        <strong>Lindenstrasse 33, 4123 Allschwil</strong><br>
+        <strong>infojulienb@gmail.com</strong><br>
+        <strong>079 942 52 15</strong></p>
 
         <h2>1. Erhebung und Verarbeitung personenbezogener Daten</h2>
         <p>Wir erheben und verarbeiten personenbezogene Daten unserer Nutzer grundsätzlich nur, soweit dies zur Bereitstellung eines funktionsfähigen Spiels sowie unserer Inhalte und Leistungen erforderlich ist. Die Erhebung und Verarbeitung personenbezogener Daten unserer Nutzer erfolgt regelmäßig nur nach Einwilligung des Nutzers. Eine Ausnahme gilt in solchen Fällen, in denen eine vorherige Einholung einer Einwilligung aus tatsächlichen Gründen nicht möglich ist und die Verarbeitung der Daten durch gesetzliche Vorschriften gestattet ist.</p>
@@ -128,7 +128,7 @@
         <h2>8. Änderungen dieser Datenschutzerklärung</h2>
         <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen, z.B. bei der Einführung neuer Dienste. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.</p>
 
-        <p>Stand: <strong>[Datum der letzten Aktualisierung, z.B. 10. Juli 2025]</strong></p>
+        <p>Stand: <strong>Datum der letzten Aktualisierung, 10. Juli 2025</strong></p>
     </div>
 </body>
 </html>
