--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
         <h1>Datenschutzerklärung</h1>
 
-        <p>Diese Datenschutzerklärung informiert Sie über die Art, den Umfang und den Zweck der Verarbeitung von personenbezogenen Daten (im Folgenden „Daten“) innerhalb unseres mobilen Spiels „<strong>CosmicGarden</strong>“ (im Folgenden „Spiel“) und der damit verbundenen Funktionen und Inhalte.</p>
+        <p>Diese Datenschutzerklärung informiert Sie über die Art, den Umfang und den Zweck der Verarbeitung von personenbezogenen Daten innerhalb unseres mobilen Spiels „<strong>CosmicGarden</strong>“ (im Folgenden „Spiel“) und der damit verbundenen Funktionen und Inhalte.</p>
         <p>Verantwortlicher im Sinne der Datenschutz-Grundverordnung (DSGVO) und anderer nationaler Datenschutzgesetze der Mitgliedsstaaten sowie sonstiger datenschutzrechtlicher Bestimmungen ist:</p>
 
         <p><strong>Julien Buncak</strong><br>
